Fix notification screen z-index bug.
It wasn't properly appearing above dashboard HTML. Simple z-index setting fixed it.

--- a/rpi/views/notification-contact.css
+++ b/rpi/views/notification-contact.css
@@ -5,6 +5,7 @@
     height: 100vh;
     width: 100vw;
     position: absolute;
+    z-index: 1000;
 }
 .notification .msg 
 {
